Edge detection works.

--- a/snake.html
+++ b/snake.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 	<title>Snake Game</title>
+	<style>
+		canvas {
+			border: 1px solid red;
+		}
+	</style>
+
 </head>
 <body>
 	<h1>Snake</h1>
