--- a/snake.html
+++ b/snake.html
@@ -3,7 +3,7 @@
 	<title>Snake Game</title>
 	<style>
 		canvas {
-			border: 1px solid red;
+			border: 10px solid red;
 		}
 	</style>
 
@@ -14,6 +14,10 @@
 	
 	<canvas id="snakeGameCanvas" width="500" height="500"></canvas>
 
+	<!--
 	<script type="text/javascript" src="snakeGame.js"></script>
+	-->
+	<script type="text/javascript" src="simpleSnake.js"></script>
+
 </body>
 </html>
